syntax = "proto3";

package dfs.extentservice;

service ExtentService {
  rpc stop(StopRequest) returns (StopResponse);
  rpc get(GetRequest) returns (GetResponse);
  rpc put(PutRequest) returns (PutResponse);
}

message StopRequest {
}

message StopResponse {
}

message GetRequest {
  string fileName = 1;
}

message GetResponse {
  optional bytes fileData = 1;
}

message PutRequest {
  string fileName = 1;
  optional bytes fileData = 2;
}

message PutResponse {
  bool success = 1;
}
